# acfwrapper

./: .gitignore  README.md  acf.sln
binding_csharp/ACFSharp.Wrapper/: ACFSharp.Wrapper.vcxproj  ACFSharp.Wrapper.vcxproj.filters  AssemblyInfo.cpp
binding_csharp/ACFSharp.Wrapper/src/: utils.h  vcclr_local.h  wrapper_main.cc  wrapper_main.h
binding_epl/libacf_caller/: epl_binding.vcxproj  epl_binding.vcxproj.filters
binding_epl/libacf_caller/ec/: acframework.e
binding_epl/libacf_caller/src/: struct_class.cc  struct_class.h  wrapper_acfclass.cc  wrapper_acfclass.h  wrapper_browser.cc  wrapper_callback.cc  wrapper_environment.cc  wrapper_handler_interface.cc  wrapper_handler_interface.h  wrapper_network.cc  wrapper_profile.cc  wrapper_types.h  wrapper_urlrequest.cc  wrapper_urlrequest.h  wrapper_utility.cc  wrapper_utility.h  wrapper_values.cc  wrapper_websocket.cc  wrapper_websocket.h
cmake/: CMakeLists.txt
cmake/acfclient/: CMakeLists.txt  client_window.cc  client_window.h  main.cc  message_loop_manager.cc  message_loop_manager.h
cmake/include/: acf_browser.h  acf_callback.h  acf_context_menu.h  acf_devtools_observer.h  acf_dom.h  acf_environment.h  acf_frame.h  acf_function_handler.h  acf_parser.h  acf_profile.h  acf_registration.h  acf_request.h  acf_resource_request_handler.h  acf_response.h  acf_urlrequest.h  acf_values.h  acf_web_message_handler.h  acf_websocket.h
cmake/include/capi/: acf_base_capi.h  acf_browser_capi.h  acf_callback_capi.h  acf_context_menu_capi.h  acf_devtools_observer_capi.h  acf_dom_capi.h  acf_environment_capi.h  acf_frame_capi.h  acf_function_handler_capi.h  acf_parser_capi.h  acf_profile_capi.h  acf_registration_capi.h  acf_request_capi.h  acf_resource_request_handler_capi.h  acf_response_capi.h  acf_urlrequest_capi.h  acf_values_capi.h  acf_web_message_handler_capi.h  acf_websocket_capi.h
cmake/include/internal/: acf_defines.h  acf_enums.h  acf_scoped_refptr.h  acf_string.h  acf_string_list.h  acf_string_map.h  acf_string_multimap.h  acf_string_types.h  acf_string_wrappers.h  acf_types.h  acf_types_wrappers.h
cmake/lib/x64/: libacf.lib
cmake/lib/x86/: libacf.lib
cmake/libacf_dll/: CMakeLists.txt  wrapper_types.h
cmake/libacf_dll/cpptoc/: browser_handler_cpptoc.cc  browser_handler_cpptoc.h  complete_handler_cpptoc.cc  complete_handler_cpptoc.h  complete_value_handler_cpptoc.cc  complete_value_handler_cpptoc.h  cookie_visitor_cpptoc.cc  cookie_visitor_cpptoc.h  cpptoc_ref_counted.h  cpptoc_scoped.h  dev_tools_message_observer_cpptoc.cc  dev_tools_message_observer_cpptoc.h  domdocument_callback_cpptoc.cc  domdocument_callback_cpptoc.h  domnode_callback_cpptoc.cc  domnode_callback_cpptoc.h  environment_handler_cpptoc.cc  environment_handler_cpptoc.h  execute_javascript_callback_cpptoc.cc  execute_javascript_callback_cpptoc.h  function_factory_cpptoc.cc  function_factory_cpptoc.h  function_handler_cpptoc.cc  function_handler_cpptoc.h  resource_handler_cpptoc.cc  resource_handler_cpptoc.h  resource_request_handler_cpptoc.cc  resource_request_handler_cpptoc.h  response_filter_cpptoc.cc  response_filter_cpptoc.h  string_visitor_cpptoc.cc  string_visitor_cpptoc.h  urlrequest_client_cpptoc.cc  urlrequest_client_cpptoc.h  web_message_factory_cpptoc.cc  web_message_factory_cpptoc.h  web_message_handler_cpptoc.cc  web_message_handler_cpptoc.h  web_socket_client_handler_cpptoc.cc  web_socket_client_handler_cpptoc.h
cmake/libacf_dll/ctocpp/: binary_value_ctocpp.cc  binary_value_ctocpp.h  browser_ctocpp.cc  browser_ctocpp.h  callback_ctocpp.cc  callback_ctocpp.h  context_menu_callback_ctocpp.cc  context_menu_callback_ctocpp.h  context_menu_model_ctocpp.cc  context_menu_model_ctocpp.h  context_menu_params_ctocpp.cc  context_menu_params_ctocpp.h  cookie_ctocpp.cc  cookie_ctocpp.h  cookie_manager_ctocpp.cc  cookie_manager_ctocpp.h  ctocpp_ref_counted.h  ctocpp_scoped.h  dictionary_value_ctocpp.cc  dictionary_value_ctocpp.h  domdocument_ctocpp.cc  domdocument_ctocpp.h  domnode_ctocpp.cc  domnode_ctocpp.h  environment_ctocpp.cc  environment_ctocpp.h  file_dialog_callback_ctocpp.cc  file_dialog_callback_ctocpp.h  frame_ctocpp.cc  frame_ctocpp.h  java_script_dialog_callback_ctocpp.cc  java_script_dialog_callback_ctocpp.h  list_value_ctocpp.cc  list_value_ctocpp.h  login_delegate_ctocpp.cc  login_delegate_ctocpp.h  new_window_delegate_ctocpp.cc  new_window_delegate_ctocpp.h  permission_prompt_callback_ctocpp.cc  permission_prompt_callback_ctocpp.h  (+26 more)
cmake/libacf_dll/wrapper/: libacf_dll_wrapper.cc
